--- a/package.json
+++ b/package.json
@@ -1,21 +1,78 @@
 {
-  "name": "barathon-front",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
-    "@vitejs/plugin-react": "^2.2.0",
-    "vite": "^3.2.3"
-  }
+    "name": "barathon-front",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "prepare": "husky install",
+        "lint": "eslint \"src/**/*.{js,jsx}\"",
+        "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+        "pre-commit": "npm run format && lint-staged && pretty-quick --staged",
+        "test": "vitest",
+        "test:ui": "vitest --ui",
+        "test:coverage": "vitest run --coverage"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
+        "@mui/icons-material": "5.6.2",
+        "@mui/material": "^5.11.10",
+        "@mui/x-data-grid": "^5.17.25",
+        "@testing-library/user-event": "^14.4.3",
+        "axios": "^1.2.1",
+        "buffer": "^6.0.3",
+        "commitizen": "^4.2.5",
+        "dotenv": "^16.0.3",
+        "formik": "^2.2.9",
+        "localforage": "^1.10.0",
+        "match-sorter": "^6.3.1",
+        "prop-types": "^15.8.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-hot-toast": "^2.4.0",
+        "react-loader-spinner": "^5.3.4",
+        "react-router-dom": "^6.4.3",
+        "sort-by": "^0.0.2",
+        "validate-branch-name": "^1.3.0",
+        "vite-plugin-svgr": "^2.4.0",
+        "yup": "^0.32.11"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^17.3.0",
+        "@commitlint/config-conventional": "^17.3.0",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@types/react": "^18.0.24",
+        "@types/react-dom": "^18.0.8",
+        "@vitejs/plugin-react": "^2.2.0",
+        "@vitest/coverage-c8": "^0.26.0",
+        "@vitest/ui": "^0.26.0",
+        "eslint": "8.22.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-react": "^7.31.11",
+        "eslint-plugin-testing-library": "^5.9.1",
+        "husky": "^8.0.0",
+        "jsdom": "^20.0.3",
+        "lint-staged": "^13.0.3",
+        "prettier": "^2.8.0",
+        "pretty-quick": "^3.1.3",
+        "vite": "^3.2.3",
+        "vitest": "^0.26.0"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
+    },
+    "husky": {
+        "hooks": {
+            "prepare-commit-msg": "exec < /dev/tty && npx cz --hook || true"
+        }
+    },
+    "lint-staged": {
+        "*.jsx": "eslint --cache --fix"
+    }
 }
